<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/tvText_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_coder"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnUzbek"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/uzbek"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnRussian"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/russian"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnEnglish"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/english"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/btnKorean"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/korean"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnJapanese"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/japanese"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnArabic"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/arabic"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnFrench"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/french"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/btnGerman"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/german"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>